# desafios-challenges

./: README.md
resolucoes/001-desafios-javascript/challenges/1/: challenge.js  challenge.test.js
resolucoes/001-desafios-javascript/challenges/2/: challenge.js
resolucoes/001-desafios-javascript/challenges/3/: challenge.js
resolucoes/001-desafios-javascript/challenges/4/: challenge.js
resolucoes/001-desafios-javascript/challenges/5/: challenge.js
resolucoes/001-desafios-javascript/challenges/6/: challenge.js
resolucoes/002-python-test/: pyproject.toml
resolucoes/002-python-test/app/: core.py  main.py
resolucoes/003-picpay-devops-jr-challenger/: CHALLENGER.md  README.md  docker-compose.yaml  requests.http
resolucoes/003-picpay-devops-jr-challenger/services/frontend/: Dockerfile  package.json
resolucoes/003-picpay-devops-jr-challenger/services/reader/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
resolucoes/003-picpay-devops-jr-challenger/services/writer/: .dockerignore  Dockerfile
